# oa-mvp

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  announcements.py  approvals.py  auth.py  depts.py  positions.py  process_types.py  requests.py  users.py  workflows.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: announcements.py  auth.py  depts.py  positions.py  process_types.py  requests.py  users.py  workflows.py
frontend/: api.js  app.js  index.html  styles.css
